--- a/Platformio/platformio.ini
+++ b/Platformio/platformio.ini
@@ -8,6 +8,48 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+[platformio]
+default_envs = esp32
+
+
+; Shared options
+[env]
+build_flags =
+  -std=c++17
+  -std=gnu++17
+  ; Don't use lv_conf.h. Tweak params via platfom.ini.
+  -D LV_CONF_INCLUDE_SIMPLE
+  -D LV_CONF_SKIP
+  ;------------- LVGL ------------------------------------------
+  -D LV_MEM_CUSTOM=1
+  -D LV_MEM_SIZE="\(48U * 1024U\)"
+  -D LV_FONT_MONTSERRAT_12=1
+  -D LV_FONT_MONTSERRAT_16=1
+  -D LV_FONT_MONTSERRAT_24=1
+  -D LV_USE_CALENDAR=1
+  -D LV_USE_IMGBTN=1
+  -D LV_USE_WIN=1
+  -D LV_THEME_DEFAULT_DARK=1
+  -D LV_BUILD_EXAMPLES=0
+
+  ;------------ OMOTE Defines -----------------------------------
+  ; Currently based on the ILI9341_DRIVER
+  ;-D SCREEN_WIDTH=240
+  ;-D SCREEN_HEIGHT=320
+
+  ; ------------- Includes ------------------------------------
+  ;-I OmoteUI
+  -I HAL
+  -I HAL/HardwareModules
+
+lib_deps =
+  lvgl/lvgl@^8.3.9
+lib_archive = false
+build_src_filter =
+  ;+<../OmoteUI/*>
+  +<../HAL/HardwareAbstract.cpp>
+  +<../HAL/HardwareModules/DisplayAbstract.cpp>
+
 [env:esp32]
 platform = espressif32
 board = esp32dev
@@ -18,16 +60,25 @@ board_build.f_cpu = 240000000L
 board_build.partitions = huge_app.csv
 upload_speed = 1000000
 lib_deps = 
+	${env.lib_deps}
 	sparkfun/SparkFun LIS3DH Arduino Library@^1.0.3
 	crankyoldgit/IRremoteESP8266@^2.8.4
 	adafruit/Adafruit FT6206 Library@^1.0.6
-	lvgl/lvgl@^8.3.4
+	;lvgl/lvgl@^8.3.4
 	bodmer/TFT_eSPI@^2.5.23
 	knolleary/PubSubClient@^2.8
+	adafruit/Adafruit BusIO@^1.14.5
+	Wire
+	WiFi
+	SPI
+	Keypad
+	Preferences
+
 build_flags = 
+	${env.build_flags}
+
+	; ---------------- TFT_eSPI Defines replace(User_setup.h-file)---------
 	-D CORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_DEBUG
-	-I include ; Include the folder containing lv_conf.h
-	; The following lines replace the TFT_eSPI User_setup.h-file
 	-D USER_SETUP_LOADED=1
 	-D ILI9341_DRIVER=1
 	-D TFT_WIDTH=240
@@ -37,14 +88,24 @@ build_flags =
 	-D TFT_CS=5
 	-D TFT_DC=9
 	-D TFT_RST=-1
-	-D SPI_FREQUENCY=40000000 ; 40MHz default, some displays might support 80MHz
+	-D SPI_FREQUENCY=40000000
 	-D SPI_TOUCH_FREQUENCY=2500000
-	; TFT_eSPI fonts are disabled by default
-	;-D LOAD_GLCD=1
-	;-D LOAD_FONT2=1
-	;-D LOAD_FONT4=1
-	;-D LOAD_FONT6=1
-	;-D LOAD_FONT7=1
-	;-D LOAD_FONT8=1
-	;-D LOAD_GFXFF=1
-	;-D SMOOTH_FONT=1
+	
+    ; --------------- LVGL Defines --------------------------------------
+    -D LV_TICK_CUSTOM=1
+  	-D LV_TICK_CUSTOM_INCLUDE="\"Arduino.h\""
+ 	-D LV_TICK_CUSTOM_SYS_TIME_EXPR="'(millis())'"
+
+	; ------------- Includes --------------------------------------------
+	-I HAL/Targets/ESP32/
+	;-I HAL/Targets/ESP32/**
+	-I HAL/Targets/ESP32/battery
+	-I HAL/Targets/ESP32/display
+	-I HAL/Targets/ESP32/wifiHandler
+
+build_unflags =
+    -std=gnu++11
+build_src_filter =
+  +<main.cpp>
+  +<../HAL/Targets/ESP32/*>
+  ${env.build_src_filter}
