--- a/Platformio/platformio.ini
+++ b/Platformio/platformio.ini
@@ -22,7 +22,7 @@ build_flags =
   -D LV_CONF_SKIP
   ;------------- LVGL ------------------------------------------
   -D LV_MEM_CUSTOM=1
-  -D LV_MEM_SIZE="\(48U * 1024U\)"
+  -D LV_MEM_SIZE="(48U * 1024U)"
   -D LV_FONT_MONTSERRAT_12=1
   -D LV_FONT_MONTSERRAT_16=1
   -D LV_FONT_MONTSERRAT_24=1
@@ -34,21 +34,36 @@ build_flags =
 
   ;------------ OMOTE Defines -----------------------------------
   ; Currently based on the ILI9341_DRIVER
-  ;-D SCREEN_WIDTH=240
-  ;-D SCREEN_HEIGHT=320
+  -D SCREEN_WIDTH=240
+  -D SCREEN_HEIGHT=320
 
   ; ------------- Includes ------------------------------------
-  ;-I OmoteUI
+  -I OmoteUI
+  -I OmoteUI/core
+  -I OmoteUI/core/screen
+  -I OmoteUI/core/widget
+  -I OmoteUI/core/page
+  -I OmoteUI/UIs
+  ;-I OmoteUI/UIs/Basic
+  -I OmoteUI/UIs/BasicRefactored
+  -I OmoteUI/UIs/BasicRefactored/screen
+  -I OmoteUI/UIs/BasicRefactored/page
+  -I OmoteUI/UIs/BasicRefactored/widget
   -I HAL
   -I HAL/HardwareModules
 
 lib_deps =
-  lvgl/lvgl@^8.3.9
+  ;lvgl/lvgl@^8.3.9
+  lvgl=https://github.com/lvgl/lvgl/archive/refs/tags/v8.3.9.zip
+
 lib_archive = false
 build_src_filter =
-  ;+<../OmoteUI/*>
-  +<../HAL/HardwareAbstract.cpp>
-  +<../HAL/HardwareModules/DisplayAbstract.cpp>
+  +<../OmoteUI/*>
+  -<../OmoteUI/UIs/Basic/*>
+  +<../HAL/*.cpp>
+  +<../HAL/HardwareModules/*.cpp>
+
+
 
 [env:esp32]
 platform = espressif32
@@ -57,51 +72,52 @@ framework = arduino
 monitor_speed = 115200
 board_build.f_flash = 80000000L
 board_build.f_cpu = 240000000L
-board_build.partitions = huge_app.csv
 upload_speed = 1000000
-lib_deps = 
-	${env.lib_deps}
+lib_deps =
+  ${env.lib_deps}
 	sparkfun/SparkFun LIS3DH Arduino Library@^1.0.3
 	crankyoldgit/IRremoteESP8266@^2.8.4
+  	adafruit/Adafruit BusIO @ 1.9.6
 	adafruit/Adafruit FT6206 Library@^1.0.6
-	;lvgl/lvgl@^8.3.4
 	bodmer/TFT_eSPI@^2.5.23
 	knolleary/PubSubClient@^2.8
-	adafruit/Adafruit BusIO@^1.14.5
 	Wire
 	WiFi
 	SPI
 	Keypad
 	Preferences
+build_flags =
+  ${env.build_flags}
+  -D OMOTE_ESP32
 
-build_flags = 
-	${env.build_flags}
+  -D CORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_DEBUG
 
 	; ---------------- TFT_eSPI Defines replace(User_setup.h-file)---------
-	-D CORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_DEBUG
 	-D USER_SETUP_LOADED=1
 	-D ILI9341_DRIVER=1
-	-D TFT_WIDTH=240
-	-D TFT_HEIGHT=320
+	;-D TFT_WIDTH=SCREEN_WIDTH
+	;-D TFT_HEIGHT=SCREEN_HEIGHT
 	-D TFT_MOSI=23
 	-D TFT_SCLK=18
 	-D TFT_CS=5
 	-D TFT_DC=9
 	-D TFT_RST=-1
-	-D SPI_FREQUENCY=40000000
+	-D SPI_FREQUENCY=40000000 ; 40MHz default, some displays might support 80MHz
 	-D SPI_TOUCH_FREQUENCY=2500000
-	
-    ; --------------- LVGL Defines --------------------------------------
-    -D LV_TICK_CUSTOM=1
-  	-D LV_TICK_CUSTOM_INCLUDE="\"Arduino.h\""
- 	-D LV_TICK_CUSTOM_SYS_TIME_EXPR="'(millis())'"
 
-	; ------------- Includes --------------------------------------------
-	-I HAL/Targets/ESP32/
-	;-I HAL/Targets/ESP32/**
-	-I HAL/Targets/ESP32/battery
-	-I HAL/Targets/ESP32/display
-	-I HAL/Targets/ESP32/wifiHandler
+  ; --------------- LVGL Defines --------------------------------------
+  -D LV_TICK_CUSTOM=1
+  -D LV_TICK_CUSTOM_INCLUDE="\"Arduino.h\""
+  -D LV_TICK_CUSTOM_SYS_TIME_EXPR="'(millis())'"
+  
+  ; ------------- Includes --------------------------------------------
+  -I HAL/Targets/ESP32
+  -I HAL/Targets/ESP32/battery
+  -I HAL/Targets/ESP32/display
+  -I HAL/Targets/ESP32/wifiHandler
+  -I HAL/Targets/ESP32/keys
+
+monitor_filters = esp32_exception_decoder
 
 build_unflags =
     -std=gnu++11
@@ -109,3 +125,5 @@ build_src_filter =
   +<main.cpp>
   +<../HAL/Targets/ESP32/*>
   ${env.build_src_filter}
+
+
