--- a/Platformio/platformio.ini
+++ b/Platformio/platformio.ini
@@ -37,7 +37,6 @@ build_flags =
 	-D SCREEN_HEIGHT=320
 
 	; ------------- Includes ------------------------------------
-	-I OmoteUI
 
 lib_deps =
 	;lvgl/lvgl@^8.3.9
@@ -93,6 +92,8 @@ build_flags =
 	-D LV_TICK_CUSTOM_SYS_TIME_EXPR="'(millis())'"
 
 	; ------------- Includes --------------------------------------------
+	-I include
+	-I OmoteUI
 	;-I HAL/Targets/ESP32
 	;-I HAL/Targets/ESP32/battery
 	;-I HAL/Targets/ESP32/display
@@ -105,9 +106,9 @@ monitor_filters =
 build_unflags =
     -std=gnu++11
 build_src_filter =
+	${env.build_src_filter}
 	+<main.cpp>
 	+<assests.c>
-	${env.build_src_filter}
 
 ; [env:esp32]
 ; platform = espressif32
