--- a/Platformio/platformio.ini
+++ b/Platformio/platformio.ini
@@ -11,8 +11,27 @@
 [platformio]
 default_envs = esp32
 
-; Shared options
-[env]
+[env:esp32]
+platform = espressif32
+board = esp32dev
+framework = arduino
+monitor_speed = 115200
+board_build.f_flash = 80000000L
+board_build.f_cpu = 240000000L
+upload_speed = 1000000
+lib_deps =
+	lvgl=https://github.com/lvgl/lvgl/archive/refs/tags/v8.3.9.zip
+	sparkfun/SparkFun LIS3DH Arduino Library@^1.0.3
+	crankyoldgit/IRremoteESP8266@^2.8.4
+	adafruit/Adafruit BusIO @ 1.9.6
+	adafruit/Adafruit FT6206 Library@^1.0.6
+	bodmer/TFT_eSPI@^2.5.23
+	knolleary/PubSubClient@^2.8
+	Wire
+	WiFi
+	SPI
+	Keypad
+	Preferences
 build_flags =
 	-std=c++17
 	-std=gnu++17
@@ -22,6 +41,7 @@ build_flags =
 	;------------- LVGL ------------------------------------------
 	-D LV_MEM_CUSTOM=1
 	-D LV_MEM_SIZE="(48U * 1024U)"
+	-D LV_FONT_MONTSERRAT_8=1
 	-D LV_FONT_MONTSERRAT_12=1
 	-D LV_FONT_MONTSERRAT_16=1
 	-D LV_FONT_MONTSERRAT_24=1
@@ -35,42 +55,6 @@ build_flags =
 	; Currently based on the ILI9341_DRIVER
 	-D SCREEN_WIDTH=240
 	-D SCREEN_HEIGHT=320
-
-	; ------------- Includes ------------------------------------
-
-lib_deps =
-	;lvgl/lvgl@^8.3.9
-	lvgl=https://github.com/lvgl/lvgl/archive/refs/tags/v8.3.9.zip
-
-lib_archive = false
-
-build_src_filter =
-	+<../OmoteUI/*>
-
-
-[env:esp32]
-platform = espressif32
-board = esp32dev
-framework = arduino
-monitor_speed = 115200
-board_build.f_flash = 80000000L
-board_build.f_cpu = 240000000L
-upload_speed = 1000000
-lib_deps =
-	${env.lib_deps}
-	sparkfun/SparkFun LIS3DH Arduino Library@^1.0.3
-	crankyoldgit/IRremoteESP8266@^2.8.4
-	adafruit/Adafruit BusIO @ 1.9.6
-	adafruit/Adafruit FT6206 Library@^1.0.6
-	bodmer/TFT_eSPI@^2.5.23
-	knolleary/PubSubClient@^2.8
-	Wire
-	WiFi
-	SPI
-	Keypad
-	Preferences
-build_flags =
-	${env.build_flags}
 	-D OMOTE_ESP32
 	-D CORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_DEBUG
 	; ---------------- TFT_eSPI Defines replace(User_setup.h-file)---------
@@ -92,8 +76,12 @@ build_flags =
 	-D LV_TICK_CUSTOM_SYS_TIME_EXPR="'(millis())'"
 
 	; ------------- Includes --------------------------------------------
+	-I src
 	-I include
 	-I OmoteUI
+	-I HAL/Display
+	-I HAL/WifiHandler
+	-I HAL/Battery
 	;-I HAL/Targets/ESP32
 	;-I HAL/Targets/ESP32/battery
 	;-I HAL/Targets/ESP32/display
@@ -106,9 +94,12 @@ monitor_filters =
 build_unflags =
     -std=gnu++11
 build_src_filter =
-	${env.build_src_filter}
 	+<main.cpp>
-	+<assests.c>
+	+<assets.c>
+	+<../OmoteUI/*>
+	+<../HAL/Display/*>
+	+<../HAL/WifiHandler/*>
+	+<../HAL/Battery/*>
 
 ; [env:esp32]
 ; platform = espressif32
