--- a/Platformio/.vscode/settings.json
+++ b/Platformio/.vscode/settings.json
@@ -4,5 +4,6 @@
         "random": "cpp",
         "array": "cpp"
     },
-    "cmake.sourceDirectory": "${workspaceFolder}/.pio/libdeps/esp32/Adafruit BusIO"
+    "cmake.sourceDirectory": "${workspaceFolder}/.pio/libdeps/esp32/Adafruit BusIO",
+    "C_Cpp.errorSquiggles": "enabled"
 }
