--- a/Platformio/platformio.ini
+++ b/Platformio/platformio.ini
@@ -78,15 +78,9 @@ build_flags =
 	; ------------- Includes --------------------------------------------
 	-I src
 	-I include
-	-I OmoteUI
 	-I HAL/Display
 	-I HAL/WifiHandler
 	-I HAL/Battery
-	;-I HAL/Targets/ESP32
-	;-I HAL/Targets/ESP32/battery
-	;-I HAL/Targets/ESP32/display
-	;-I HAL/Targets/ESP32/wifiHandler
-	;-I HAL/Targets/ESP32/keys
 
 monitor_filters =
 	esp32_exception_decoder
@@ -96,53 +90,8 @@ build_unflags =
 build_src_filter =
 	+<main.cpp>
 	+<assets.c>
-	+<../OmoteUI/*>
+	;+<../OmoteUI/Settings/*>
 	+<../HAL/Display/*>
 	+<../HAL/WifiHandler/*>
 	+<../HAL/Battery/*>
-
-; [env:esp32]
-; platform = espressif32
-; board = esp32dev
-; framework = arduino
-; monitor_speed = 115200
-; board_build.f_flash = 80000000L
-; board_build.f_cpu = 240000000L
-; upload_speed = 1000000
-; lib_deps = 
-; 	sparkfun/SparkFun LIS3DH Arduino Library@^1.0.3
-; 	crankyoldgit/IRremoteESP8266@^2.8.4
-; 	adafruit/Adafruit FT6206 Library@^1.0.6
-; 	lvgl/lvgl@^8.3.4
-; 	bodmer/TFT_eSPI@^2.5.23
-; 	knolleary/PubSubClient@^2.8
-; build_flags = 
-; 	-D CORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_DEBUG
-; 	-I include ; Include the folder containing lv_conf.h
-; 	-I UI
-; 	; The following lines replace the TFT_eSPI User_setup.h-file
-; 	-D USER_SETUP_LOADED=1
-; 	-D ILI9341_DRIVER=1
-; 	-D TFT_WIDTH=240
-; 	-D TFT_HEIGHT=320
-; 	-D TFT_MOSI=23
-; 	-D TFT_SCLK=18
-; 	-D TFT_CS=5
-; 	-D TFT_DC=9
-; 	-D TFT_RST=-1
-; 	-D SPI_FREQUENCY=80000000
-; 	-D SPI_TOUCH_FREQUENCY=2500000
-; 	; TFT_eSPI fonts are disabled by default
-; 	;-D LOAD_GLCD=1
-; 	;-D LOAD_FONT2=1
-; 	;-D LOAD_FONT4=1
-; 	;-D LOAD_FONT6=1
-; 	;-D LOAD_FONT7=1
-; 	;-D LOAD_FONT8=1
-; 	;-D LOAD_GFXFF=1
-; 	;-D SMOOTH_FONT=1
-
-; build_src_filter =
-;   	+<main.cpp>
-; 	+<UI/Statusbar.cpp>
-; 	+<assets.c>
+	
