seperate settings pane

--- a/Platformio/platformio.ini
+++ b/Platformio/platformio.ini
@@ -78,6 +78,7 @@ build_flags =
 	; ------------- Includes --------------------------------------------
 	-I src
 	-I include
+	-I UI/Settings
 	-I HAL/Display
 	-I HAL/WifiHandler
 	-I HAL/Battery
@@ -90,7 +91,7 @@ build_unflags =
 build_src_filter =
 	+<main.cpp>
 	+<assets.c>
-	;+<../OmoteUI/Settings/*>
+	+<../UI/Settings/*>
 	+<../HAL/Display/*>
 	+<../HAL/WifiHandler/*>
 	+<../HAL/Battery/*>
