--- a/Platformio/platformio.ini
+++ b/Platformio/platformio.ini
@@ -79,6 +79,7 @@ build_flags =
 	-I src
 	-I include
 	-I UI/Settings
+	-I UI/Technisat
 	-I HAL/Display
 	-I HAL/WifiHandler
 	-I HAL/Battery
@@ -92,6 +93,7 @@ build_src_filter =
 	+<main.cpp>
 	+<assets.c>
 	+<../UI/Settings/*>
+	+<../UI/Technisat/*>
 	+<../HAL/Display/*>
 	+<../HAL/WifiHandler/*>
 	+<../HAL/Battery/*>
