--- a/Platformio/platformio.ini
+++ b/Platformio/platformio.ini
@@ -80,6 +80,7 @@ build_flags =
 	-I include
 	-I UI/Settings
 	-I UI/Technisat
+	-I UI/AppleTV
 	-I HAL/Display
 	-I HAL/WifiHandler
 	-I HAL/Battery
@@ -94,6 +95,7 @@ build_src_filter =
 	+<assets.c>
 	+<../UI/Settings/*>
 	+<../UI/Technisat/*>
+	+<../UI/AppleTV/*>
 	+<../HAL/Display/*>
 	+<../HAL/WifiHandler/*>
 	+<../HAL/Battery/*>
