--- a/Platformio/platformio.ini
+++ b/Platformio/platformio.ini
@@ -81,6 +81,7 @@ build_flags =
 	-I UI/Settings
 	-I UI/Technisat
 	-I UI/AppleTV
+	-I UI/SmartHome
 	-I HAL/Display
 	-I HAL/WifiHandler
 	-I HAL/Battery
@@ -90,12 +91,14 @@ monitor_filters =
 
 build_unflags =
     -std=gnu++11
+	
 build_src_filter =
 	+<main.cpp>
 	+<assets.c>
 	+<../UI/Settings/*>
 	+<../UI/Technisat/*>
 	+<../UI/AppleTV/*>
+	+<../UI/SmartHome/*>
 	+<../HAL/Display/*>
 	+<../HAL/WifiHandler/*>
 	+<../HAL/Battery/*>
