--- a/Platformio/platformio.ini
+++ b/Platformio/platformio.ini
@@ -85,13 +85,13 @@ build_flags =
 	-I HAL/Display
 	-I HAL/WifiHandler
 	-I HAL/Battery
-
+	-I HAL/IRHandler
 monitor_filters =
 	esp32_exception_decoder
 
 build_unflags =
     -std=gnu++11
-	
+
 build_src_filter =
 	+<main.cpp>
 	+<assets.c>
@@ -102,4 +102,5 @@ build_src_filter =
 	+<../HAL/Display/*>
 	+<../HAL/WifiHandler/*>
 	+<../HAL/Battery/*>
+	+<../HAL/IRHandler/*>
 	
