--- a/Platformio/platformio.ini
+++ b/Platformio/platformio.ini
@@ -19,7 +19,7 @@ monitor_speed = 115200
 board_build.f_flash = 80000000L
 board_build.f_cpu = 240000000L
 upload_speed = 1000000
-lib_deps =
+lib_deps = 
 	lvgl=https://github.com/lvgl/lvgl/archive/refs/tags/v8.3.9.zip
 	sparkfun/SparkFun LIS3DH Arduino Library@^1.0.3
 	crankyoldgit/IRremoteESP8266@^2.8.4
@@ -32,13 +32,11 @@ lib_deps =
 	SPI
 	Keypad
 	Preferences
-build_flags =
+build_flags = 
 	-std=c++17
 	-std=gnu++17
-	; Don't use lv_conf.h. Tweak params via platfom.ini.
 	-D LV_CONF_INCLUDE_SIMPLE
 	-D LV_CONF_SKIP
-	;------------- LVGL ------------------------------------------
 	-D LV_MEM_CUSTOM=1
 	-D LV_MEM_SIZE="(48U * 1024U)"
 	-D LV_FONT_MONTSERRAT_8=1
@@ -50,34 +48,28 @@ build_flags =
 	-D LV_USE_WIN=1
 	-D LV_THEME_DEFAULT_DARK=1
 	-D LV_BUILD_EXAMPLES=0
-
-	;------------ OMOTE Defines -----------------------------------
-	; Currently based on the ILI9341_DRIVER
+	
 	-D SCREEN_WIDTH=240
 	-D SCREEN_HEIGHT=320
 	-D OMOTE_ESP32
 	-D CORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_DEBUG
-	; ---------------- TFT_eSPI Defines replace(User_setup.h-file)---------
 	-D USER_SETUP_LOADED=1
 	-D ILI9341_DRIVER=1
-	;-D TFT_WIDTH=SCREEN_WIDTH
-	;-D TFT_HEIGHT=SCREEN_HEIGHT
 	-D TFT_MOSI=23
 	-D TFT_SCLK=18
 	-D TFT_CS=5
 	-D TFT_DC=9
 	-D TFT_RST=-1
-	-D SPI_FREQUENCY=40000000 ; 40MHz default, some displays might support 80MHz
+	-D SPI_FREQUENCY=40000000
 	-D SPI_TOUCH_FREQUENCY=2500000
-
-	; --------------- LVGL Defines --------------------------------------
+	
 	-D LV_TICK_CUSTOM=1
 	-D LV_TICK_CUSTOM_INCLUDE="\"Arduino.h\""
 	-D LV_TICK_CUSTOM_SYS_TIME_EXPR="'(millis())'"
-
-	; ------------- Includes --------------------------------------------
+	
 	-I src
 	-I include
+	-I UI/
 	-I UI/Settings
 	-I UI/Technisat
 	-I UI/AppleTV
@@ -86,13 +78,13 @@ build_flags =
 	-I HAL/WifiHandler
 	-I HAL/Battery
 	-I HAL/IRHandler
-monitor_filters =
+	-I Devices
+	-I Devices/MagentaTV
+monitor_filters = 
 	esp32_exception_decoder
-
-build_unflags =
-    -std=gnu++11
-
-build_src_filter =
+build_unflags = 
+	-std=gnu++11
+build_src_filter = 
 	+<main.cpp>
 	+<assets.c>
 	+<../UI/Settings/*>
@@ -103,4 +95,4 @@ build_src_filter =
 	+<../HAL/WifiHandler/*>
 	+<../HAL/Battery/*>
 	+<../HAL/IRHandler/*>
-	
+	+<../Devices/*>
