--- a/Platformio/platformio.ini
+++ b/Platformio/platformio.ini
@@ -71,7 +71,7 @@ build_flags =
 	-I include
 	-I UI/
 	-I UI/Settings
-	-I UI/Technisat
+	-I UI/MagentaTV
 	-I UI/AppleTV
 	-I UI/SmartHome
 	-I HAL/Display
@@ -80,6 +80,7 @@ build_flags =
 	-I HAL/IRHandler
 	-I Devices
 	-I Devices/MagentaTV
+	-I Devices/Samsung
 monitor_filters = 
 	esp32_exception_decoder
 build_unflags = 
@@ -88,7 +89,7 @@ build_src_filter =
 	+<main.cpp>
 	+<assets.c>
 	+<../UI/Settings/*>
-	+<../UI/Technisat/*>
+	+<../UI/MagentaTV/*>
 	+<../UI/AppleTV/*>
 	+<../UI/SmartHome/*>
 	+<../HAL/Display/*>
