--- a/Platformio/platformio.ini
+++ b/Platformio/platformio.ini
@@ -18,9 +18,11 @@ framework = arduino
 monitor_speed = 115200
 board_build.f_flash = 80000000L
 board_build.f_cpu = 240000000L
+board_build.filesystem = littlefs
+board_build.partitions = no_ota.csv
 upload_speed = 1000000
 lib_deps = 
-	lvgl=https://github.com/lvgl/lvgl/archive/refs/tags/v8.3.9.zip
+	lvgl=https://github.com/lvgl/lvgl/archive/refs/tags/v8.3.11.zip
 	sparkfun/SparkFun LIS3DH Arduino Library@^1.0.3
 	crankyoldgit/IRremoteESP8266@^2.8.4
 	adafruit/Adafruit BusIO @ 1.9.6
@@ -32,11 +34,11 @@ lib_deps =
 	SPI
 	Keypad
 	Preferences
+	lorol/LittleFS_esp32@^1.0.6
 build_flags = 
 	-std=c++17
 	-std=gnu++17
 	-D LV_CONF_INCLUDE_SIMPLE
-	-D LV_CONF_SKIP
 	-D LV_MEM_CUSTOM=1
 	-D LV_MEM_SIZE="(48U * 1024U)"
 	-D LV_FONT_MONTSERRAT_8=1
@@ -90,6 +92,7 @@ build_src_filter =
 	+<assets.c>
 	+<../UI/Settings/*>
 	+<../UI/MagentaTV/*>
+	+<../UI/MagentaTV/Icons/*>
 	+<../UI/AppleTV/*>
 	+<../UI/SmartHome/*>
 	+<../HAL/Display/*>
