no LittleFS for icons

--- a/Platformio/platformio.ini
+++ b/Platformio/platformio.ini
@@ -18,7 +18,7 @@ framework = arduino
 monitor_speed = 115200
 board_build.f_flash = 80000000L
 board_build.f_cpu = 240000000L
-board_build.filesystem = littlefs
+;board_build.filesystem = littlefs
 board_build.partitions = no_ota.csv
 upload_speed = 1000000
 lib_deps = 
@@ -34,7 +34,7 @@ lib_deps =
 	SPI
 	Keypad
 	Preferences
-	lorol/LittleFS_esp32@^1.0.6
+	bitbank2/PNGdec@^1.0.1
 build_flags = 
 	-std=c++17
 	-std=gnu++17
@@ -91,10 +91,10 @@ build_src_filter =
 	+<main.cpp>
 	+<assets.c>
 	+<../UI/Settings/*>
-	+<../UI/MagentaTV/*>
+	+<../UI/MagentaTV/MagentaTV.cpp>
 	+<../UI/MagentaTV/Icons/*>
-	+<../UI/AppleTV/*>
-	+<../UI/SmartHome/*>
+	;+<../UI/AppleTV/*>
+	;+<../UI/SmartHome/*>
 	+<../HAL/Display/*>
 	+<../HAL/WifiHandler/*>
 	+<../HAL/Battery/*>
