--- a/Platformio/platformio.ini
+++ b/Platformio/platformio.ini
@@ -47,6 +47,7 @@ build_flags =
 	-I HAL
 	-I HAL/HardwareModules
 	-I UI/
+	-I UI/Core
 	-I UI/Settings
 	-I UI/MagentaTV
 	-I Devices
@@ -59,12 +60,14 @@ lib_deps =
 lib_archive = false
 build_src_filter =
 	+<assets.c>
-	;+<../HAL/*.cpp>
-	+<../UI/Settings/*>
-	+<../UI/MagentaTV/MagentaTV.cpp>
-	+<../UI/MagentaTV/Icons/*>
-	;+<../UI/AppleTV/*>
-	;+<../UI/SmartHome/*>
+	+<../HAL/*.cpp>
+	+<../HAL/HardwareModules/*.cpp>
+	+<../UI/*>
+	-<../UI/Settings/*>
+	-<../UI/MagentaTV/MagentaTV.cpp>
+	-<../UI/MagentaTV/Icons/*>
+	-<../UI/AppleTV/*>
+	-<../UI/SmartHome/*>
 	+<../Devices/*>
 
 
@@ -112,12 +115,12 @@ build_flags =
 	-D LV_TICK_CUSTOM_INCLUDE="\"Arduino.h\""
 	-D LV_TICK_CUSTOM_SYS_TIME_EXPR="'(millis())'"
 
-	-I HAL/ESP32
-	-I HAL/ESP32/Display
-	-I HAL/ESP32/WifiHandler
-	-I HAL/ESP32/Battery
-	-I HAL/ESP32/IRHandler
-	-I HAL/ESP32/Keys
+	-I HAL/Targets/ESP32
+	-I HAL/Targets/ESP32/Display
+	-I HAL/Targets/ESP32/WifiHandler
+	-I HAL/Targets/ESP32/Battery
+	-I HAL/Targets/ESP32/IRHandler
+	-I HAL/Targets/ESP32/Keys
 
 monitor_filters = 
 	esp32_exception_decoder
@@ -125,11 +128,13 @@ build_unflags =
 	-std=gnu++11
 build_src_filter =
 	${env.build_src_filter}
-	+<main_esp32.cpp>
-	+<../HAL/ESP32/Display/Display.cpp>
-	+<../HAL/ESP32/WifiHandler/*>
-	+<../HAL/ESP32/Battery/*>
-	+<../HAL/ESP32/IRHandler/*>
+	+<main.cpp>
+	+<../HAL/Targets/ESP32/HardwareRevX.cpp>
+	+<../HAL/Targets/ESP32/Display/Display.cpp>
+	+<../HAL/Targets/ESP32/WifiHandler/*>
+	+<../HAL/Targets/ESP32/Battery/*>
+	;+<../HAL/Targets/ESP32/IRHandler/*>
+	+<../HAL/Targets/ESP32/Keys/*>
 
 
 [env:emulator_64bits]
@@ -158,10 +163,8 @@ build_flags =
   !find /opt/homebrew/Cellar/sdl2 -name "include" | sed "s/^/-I /"
   !find /opt/homebrew/Cellar/sdl2 -name "libSDL2.a" | xargs dirname | sed "s/^/-L /"
 
-	-I HAL/SDL/Display
-	-I HAL/SDL/WifiHandler
-	-I HAL/SDL/Battery
-	-I HAL/SDL/IRHandler
+  -I HAL/Targets/SDL
+  -I HAL/Targets/SDL/wifiHandlerSim
 
 	-I /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include/**
 
@@ -174,8 +177,5 @@ lib_deps =
   
 build_src_filter =
 	${env.build_src_filter}
-	+<sim_main.c>
-	+<../HAL/SDL/Display/Display.cpp>
-	+<../HAL/SDL/WifiHandler/*>
-	+<../HAL/SDL/IRHandler/*>
-	+<../HAL/SDL/Battery/*>
+	+<simMain.cpp>
+	+<../HAL/Targets/SDL/*>
