--- a/Platformio/platformio.ini
+++ b/Platformio/platformio.ini
@@ -9,8 +9,8 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-default_envs = esp32
-;default_envs = emulator_64bits
+;default_envs = esp32
+default_envs = emulator_64bits
 
 ; Shared options
 [env]
@@ -63,7 +63,7 @@ build_src_filter =
 	+<../HAL/*.cpp>
 	+<../HAL/HardwareModules/*.cpp>
 	+<../UI/*>
-	-<../UI/Settings/*>
+	;-<../UI/Settings/*>
 	-<../UI/MagentaTV/MagentaTV.cpp>
 	-<../UI/MagentaTV/Icons/*>
 	-<../UI/AppleTV/*>
@@ -133,7 +133,7 @@ build_src_filter =
 	+<../HAL/Targets/ESP32/Display/Display.cpp>
 	+<../HAL/Targets/ESP32/WifiHandler/*>
 	+<../HAL/Targets/ESP32/Battery/*>
-	;+<../HAL/Targets/ESP32/IRHandler/*>
+	+<../HAL/Targets/ESP32/IRHandler/*>
 	+<../HAL/Targets/ESP32/Keys/*>
 
 
