--- a/Platformio/platformio.ini
+++ b/Platformio/platformio.ini
@@ -35,6 +35,8 @@ build_flags =
 	-D LV_USE_WIN=1
 	-D LV_THEME_DEFAULT_DARK=1
 	-D LV_BUILD_EXAMPLES=0
+	-D LV_USE_LOG=1
+	-D LV_LOG_PRINTF=1
 	
 	;------------ OMOTE Defines -----------------------------------
 	; Currently based on the ILI9341_DRIVER
