--- a/Platformio/platformio.ini
+++ b/Platformio/platformio.ini
@@ -66,8 +66,8 @@ build_src_filter =
 	+<../HAL/HardwareModules/*.cpp>
 	+<../UI/*>
 	;-<../UI/Settings/*>
-	-<../UI/MagentaTV/MagentaTV.cpp>
-	-<../UI/MagentaTV/Icons/*>
+	;-<../UI/MagentaTV/MagentaTV.cpp>
+	;-<../UI/MagentaTV/Icons/*>
 	-<../UI/AppleTV/*>
 	-<../UI/SmartHome/*>
 	+<../Devices/*>
