--- a/Platformio/platformio.ini
+++ b/Platformio/platformio.ini
@@ -9,18 +9,15 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-;default_envs = esp32
 default_envs = emulator_64bits
 
-; Shared options
 [env]
-build_flags =
+build_flags = 
 	-std=c++17
 	-std=gnu++17
-
+	
 	-D LV_CONF_INCLUDE_SIMPLE
 	-D LV_CONF_SKIP
-	;------------- LVGL ------------------------------------------
 	-D LV_MEM_CUSTOM=1
 	-D LV_MEM_SIZE="(48U * 1024U)"
 	-D LV_FONT_MONTSERRAT_8=1
@@ -38,11 +35,9 @@ build_flags =
 	-D LV_USE_LOG=1
 	-D LV_LOG_PRINTF=1
 	
-	;------------ OMOTE Defines -----------------------------------
-	; Currently based on the ILI9341_DRIVER
 	-D SCREEN_WIDTH=240
 	-D SCREEN_HEIGHT=320
-
+	
 	-I src
 	-I include
 	-I include/notused
@@ -55,23 +50,17 @@ build_flags =
 	-I Devices
 	-I Devices/MagentaTV
 	-I Devices/Samsung
-lib_deps =
-  ; Use direct URL, because package registry is unstable
-  ;lvgl@~7.11.0
-  ;lvgl=https://github.com/lvgl/lvgl/archive/refs/tags/v8.2.0.zip
+lib_deps = 
+	links2004/WebSockets@^2.4.1
 lib_archive = false
-build_src_filter =
+build_src_filter = 
 	+<assets.c>
 	+<../HAL/*.cpp>
 	+<../HAL/HardwareModules/*.cpp>
 	+<../UI/*>
-	;-<../UI/Settings/*>
-	;-<../UI/MagentaTV/MagentaTV.cpp>
-	;-<../UI/MagentaTV/Icons/*>
 	-<../UI/AppleTV/*>
 	-<../UI/SmartHome/*>
 	+<../Devices/*>
-
 
 [env:esp32]
 platform = espressif32
@@ -80,7 +69,6 @@ framework = arduino
 monitor_speed = 115200
 board_build.f_flash = 80000000L
 board_build.f_cpu = 240000000L
-;board_build.filesystem = littlefs
 board_build.partitions = no_ota.csv
 upload_speed = 1000000
 lib_deps = 
@@ -96,11 +84,11 @@ lib_deps =
 	SPI
 	Keypad
 	Preferences
+	links2004/WebSockets@^2.4.1
 build_flags = 
 	${env.build_flags}
 	-D OMOTE_ESP32
 	-D CORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_DEBUG
-	; ---------------- TFT_eSPI Defines replace(User_setup.h-file)---------
 	-D USER_SETUP_LOADED=1
 	-D ILI9341_DRIVER=1
 	-D TFT_MOSI=23
@@ -112,23 +100,21 @@ build_flags =
 	-D SPI_TOUCH_FREQUENCY=2500000
 	-D DISABLE_ALL_LIBRARY_WARNINGS
 	
-	; --------------- LVGL Defines --------------------------------------
 	-D LV_TICK_CUSTOM=1
 	-D LV_TICK_CUSTOM_INCLUDE="\"Arduino.h\""
 	-D LV_TICK_CUSTOM_SYS_TIME_EXPR="'(millis())'"
-
+	
 	-I HAL/Targets/ESP32
 	-I HAL/Targets/ESP32/Display
 	-I HAL/Targets/ESP32/WifiHandler
 	-I HAL/Targets/ESP32/Battery
 	-I HAL/Targets/ESP32/IRHandler
 	-I HAL/Targets/ESP32/Keys
-
 monitor_filters = 
 	esp32_exception_decoder
 build_unflags = 
 	-std=gnu++11
-build_src_filter =
+build_src_filter = 
 	${env.build_src_filter}
 	+<main.cpp>
 	+<../HAL/Targets/ESP32/HardwareRevX.cpp>
@@ -138,46 +124,36 @@ build_src_filter =
 	+<../HAL/Targets/ESP32/IRHandler/*>
 	+<../HAL/Targets/ESP32/Keys/*>
 
-
 [env:emulator_64bits]
-platform = native ;@^1.1.3
+platform = native
 extra_scripts = support/sdl2_build_extra.py
-build_flags =
-  ${env.build_flags}
-  -D OMOTE_SIM
-  ; Add recursive dirs for hal headers search
-  !python -c "import os; print(' '.join(['-I {}'.format(i[0].replace('\x5C','/')) for i in os.walk('HAL/sdl2')]))"
-  -lSDL2
-  ; SDL drivers options
-  -D LV_LVGL_H_INCLUDE_SIMPLE
-  -D LV_DRV_NO_CONF
-  -D USE_SDL
-  -D SDL_HOR_RES=SCREEN_WIDTH ;240
-  -D SDL_VER_RES=SCREEN_HEIGHT ;320  
-  -D SDL_ZOOM=1
-  -D SDL_INCLUDE_PATH="\"SDL2/SDL.h\""
-
-  ; LVGL memory options, setup for the demo to run properly
-  ;-D LV_MEM_CUSTOM=1
-  ;-D LV_MEM_SIZE="(128U * 1024U)"
-
-  ; SDL2 includes, uncomment the next two lines on MAC OS if you intalled sdl via homebrew
-  !find /opt/homebrew/Cellar/sdl2 -name "include" | sed "s/^/-I /"
-  !find /opt/homebrew/Cellar/sdl2 -name "libSDL2.a" | xargs dirname | sed "s/^/-L /"
-
-  -I HAL/Targets/SDL
-  -I HAL/Targets/SDL/wifiHandlerSim
-
+build_flags = 
+	${env.build_flags}
+	-D OMOTE_SIM
+	!python -c "import os; print(' '.join(['-I {}'.format(i[0].replace('\x5C','/')) for i in os.walk('HAL/sdl2')]))"
+	-lSDL2
+	-D LV_LVGL_H_INCLUDE_SIMPLE
+	-D LV_DRV_NO_CONF
+	-D USE_SDL
+	-D SDL_HOR_RES=SCREEN_WIDTH
+	-D SDL_VER_RES=SCREEN_HEIGHT
+	-D SDL_ZOOM=1
+	-D SDL_INCLUDE_PATH="\"SDL2/SDL.h\""
+	
+	
+	!find /opt/homebrew/Cellar/sdl2 -name "include" | sed "s/^/-I /"
+	!find /opt/homebrew/Cellar/sdl2 -name "libSDL2.a" | xargs dirname | sed "s/^/-L /"
+	
+	-I HAL/Targets/SDL
+	-I HAL/Targets/SDL/wifiHandlerSim
+	
 	-I /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include/**
-
-lib_deps =
-  ${env.lib_deps}
-  lvgl=https://github.com/lvgl/lvgl/archive/refs/tags/v8.2.0.zip
-  ; Use direct URL, because package registry is unstable
-  ;lv_drivers@~7.9.0
-  lv_drivers=https://github.com/lvgl/lv_drivers/archive/refs/tags/v8.2.0.zip
-  
-build_src_filter =
+lib_deps = 
+	${env.lib_deps}
+	lvgl=https://github.com/lvgl/lvgl/archive/refs/tags/v8.2.0.zip
+	lv_drivers=https://github.com/lvgl/lv_drivers/archive/refs/tags/v8.2.0.zip
+	links2004/WebSockets@^2.4.1
+build_src_filter = 
 	${env.build_src_filter}
 	+<simMain.cpp>
 	+<../HAL/Targets/SDL/*>
