--- a/Platformio/platformio.ini
+++ b/Platformio/platformio.ini
@@ -9,13 +9,12 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-default_envs = emulator_64bits
+default_envs = esp32
 
 [env]
 build_flags = 
 	-std=c++17
 	-std=gnu++17
-	
 	-D LV_CONF_INCLUDE_SIMPLE
 	-D LV_CONF_SKIP
 	-D LV_MEM_CUSTOM=1
@@ -34,10 +33,8 @@ build_flags =
 	-D LV_BUILD_EXAMPLES=0
 	-D LV_USE_LOG=1
 	-D LV_LOG_PRINTF=1
-	
 	-D SCREEN_WIDTH=240
 	-D SCREEN_HEIGHT=320
-	
 	-I src
 	-I include
 	-I include/notused
@@ -51,8 +48,7 @@ build_flags =
 	-I Devices/MagentaTV
 	-I Devices/Samsung
 lib_deps = 
-	links2004/WebSockets@^2.4.1
-lib_archive = false
+lib_archive = no
 build_src_filter = 
 	+<assets.c>
 	+<../HAL/*.cpp>
@@ -84,7 +80,6 @@ lib_deps =
 	SPI
 	Keypad
 	Preferences
-	links2004/WebSockets@^2.4.1
 build_flags = 
 	${env.build_flags}
 	-D OMOTE_ESP32
@@ -99,21 +94,17 @@ build_flags =
 	-D SPI_FREQUENCY=40000000
 	-D SPI_TOUCH_FREQUENCY=2500000
 	-D DISABLE_ALL_LIBRARY_WARNINGS
-	
 	-D LV_TICK_CUSTOM=1
 	-D LV_TICK_CUSTOM_INCLUDE="\"Arduino.h\""
 	-D LV_TICK_CUSTOM_SYS_TIME_EXPR="'(millis())'"
-	
 	-I HAL/Targets/ESP32
 	-I HAL/Targets/ESP32/Display
 	-I HAL/Targets/ESP32/WifiHandler
 	-I HAL/Targets/ESP32/Battery
 	-I HAL/Targets/ESP32/IRHandler
 	-I HAL/Targets/ESP32/Keys
-monitor_filters = 
-	esp32_exception_decoder
-build_unflags = 
-	-std=gnu++11
+monitor_filters = esp32_exception_decoder
+build_unflags = -std=gnu++11
 build_src_filter = 
 	${env.build_src_filter}
 	+<main.cpp>
@@ -139,20 +130,15 @@ build_flags =
 	-D SDL_VER_RES=SCREEN_HEIGHT
 	-D SDL_ZOOM=1
 	-D SDL_INCLUDE_PATH="\"SDL2/SDL.h\""
-	
-	
 	!find /opt/homebrew/Cellar/sdl2 -name "include" | sed "s/^/-I /"
 	!find /opt/homebrew/Cellar/sdl2 -name "libSDL2.a" | xargs dirname | sed "s/^/-L /"
-	
 	-I HAL/Targets/SDL
 	-I HAL/Targets/SDL/wifiHandlerSim
-	
 	-I /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include/**
 lib_deps = 
 	${env.lib_deps}
 	lvgl=https://github.com/lvgl/lvgl/archive/refs/tags/v8.2.0.zip
 	lv_drivers=https://github.com/lvgl/lv_drivers/archive/refs/tags/v8.2.0.zip
-	links2004/WebSockets@^2.4.1
 build_src_filter = 
 	${env.build_src_filter}
 	+<simMain.cpp>
